--- a/expenses-chart-component-main/style.css
+++ b/expenses-chart-component-main/style.css
@@ -34,8 +34,8 @@ body {
 
 .card {
     border-radius: 12px;
-    padding: 1.25rem;
-    margin-bottom: 1.25rem;
+    padding: 1.3rem;
+    margin-bottom: 1.3rem;
     margin-left: auto;
     margin-right: auto;
     width: clamp(260px, 100%, 375px);
@@ -225,12 +225,27 @@ hr {
         width: clamp(260px, 100%, 400px);
     }
 
+    h1,
+    h2 {
+        margin: 0;
+        color: currentColor;
+        font-size: 1.4rem;
+    }    
+
     .title {
-        font-size: .75em;
+        font-size: .77em;
+    }
+
+    .balance {
+        font-size: 1.45rem;
+    }
+
+    hr {
+        margin: 1.45rem 0;
     }
 
     .total {
-        font-size: 1.7rem;
+        font-size: 2rem;
     }
 
     .diffrence {
@@ -238,14 +253,18 @@ hr {
     }
 
     .icon {
-        padding-left: 19px;
+        padding-left: 21px;
     }
 
     .icon::before,
     .icon::after {
-        width: 40px;
-        height: 40px;
-        border-radius: 40px;
+        width: 44px;
+        height: 44px;
+        border-radius: 44px;
+    }
+
+    .chart {
+        gap: 14px;
     }
 
     .chart .day {
