--- a/expenses-chart-component-main/style.css
+++ b/expenses-chart-component-main/style.css
@@ -34,8 +34,8 @@ body {
 
 .card {
     border-radius: 12px;
-    padding: 1.4rem;
-    margin-bottom: 1.4rem;
+    padding: 1.45rem;
+    margin-bottom: 1.45rem;
     margin-left: auto;
     margin-right: auto;
     width: clamp(260px, 100%, 375px);
@@ -230,7 +230,7 @@ hr {
     h2 {
         margin: 0;
         color: currentColor;
-        font-size: 1.47rem;
+        font-size: 1.6rem;
     }    
 
     .title {
@@ -242,7 +242,7 @@ hr {
     }
 
     hr {
-        margin: 1.45rem 0;
+        margin: 1.55rem 0;
     }
 
     .total {
@@ -251,6 +251,13 @@ hr {
 
     .diffrence {
         font-size: .8rem;
+    }
+
+    .total-diff {
+        display: flex;
+        justify-content: space-between;
+        padding-top: .2rem;
+        padding-bottom: .6rem;
     }
 
     .icon {
@@ -267,7 +274,7 @@ hr {
     .chart {
         gap: 14px;
         height: 240px;
-        padding-top: 2.7rem;
+        padding-top: 3rem;
     }
 
     .chart .day {
@@ -275,7 +282,7 @@ hr {
     }
 
     .chart .info {
-        top: -44px;
+        top: -54px;
         font-size: .8rem;
     }
 }
